tests/snapshots/matcher__matcher_arinae@001.snap
---
source: tests/matcher.rs
description: "input: items INPUT_ITEMS\noptions: -q stum --algo arinae --no-typos"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  2/49                                                                       0/0"
"> stum                                                                          "
cursor: (24, 7)
