tests/snapshots/matcher__matcher_arinae_typos.snap
---
source: tests/matcher.rs
expression: buf + & cursor_pos
---
"  src/manpage.rs                                                                "
"  src/util.rs                                                                   "
"  src/fuzzy_matcher/clangd.rs                                                   "
"  src/fuzzy_matcher/frizbee.rs                                                  "
"  src/fuzzy_matcher/skim.rs                                                     "
"  src/fuzzy_matcher/util.rs                                                     "
"  src/fuzzy_matcher/mod.rs                                                      "
"  src/item.rs                                                                   "
"  src/theme.rs                                                                  "
"  src/tmux.rs                                                                   "
"  src/tui/header.rs                                                             "
"  src/tui/statusline.rs                                                         "
"  src/tui/input.rs                                                              "
"  src/tui/app.rs                                                                "
"  src/tui/backend.rs                                                            "
"  src/tui/event.rs                                                              "
"  src/tui/preview.rs                                                            "
"  src/tui/widget.rs                                                             "
"  src/tui/options.rs                                                            "
"  src/tui/util.rs                                                               "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  32/49                                                                      0/0"
"> stum                                                                          "
cursor: (24, 7)
