tests/snapshots/matcher__matcher_arinae_typos@001.snap
---
source: tests/matcher.rs
description: "input: items INPUT_ITEMS\noptions: -q stum --algo arinae --typos"
---
"  src/manpage.rs                                                                "
"  src/matcher.rs                                                                "
"  src/fuzzy_matcher/mod.rs                                                      "
"  src/fuzzy_matcher/clangd.rs                                                   "
"  src/fuzzy_matcher/frizbee.rs                                                  "
"  src/fuzzy_matcher/skim.rs                                                     "
"  src/fuzzy_matcher/util.rs                                                     "
"  src/item.rs                                                                   "
"  src/theme.rs                                                                  "
"  src/tmux.rs                                                                   "
"  src/tui/statusline.rs                                                         "
"  src/tui/input.rs                                                              "
"  src/tui/app.rs                                                                "
"  src/tui/backend.rs                                                            "
"  src/tui/event.rs                                                              "
"  src/tui/preview.rs                                                            "
"  src/tui/widget.rs                                                             "
"  src/tui/options.rs                                                            "
"  src/tui/util.rs                                                               "
"  src/tui/header.rs                                                             "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  32/49                                                                      0/0"
"> stum                                                                          "
cursor: (24, 7)
