tests/snapshots/matcher__matcher_default@001.snap
---
source: tests/matcher.rs
description: "input: items INPUT_ITEMS\noptions: -q stum"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  2/49                                                                       0/0"
"> stum                                                                          "
cursor: (24, 7)
