tests/snapshots/matcher__matcher_frizbee_typos@001.snap
---
source: tests/matcher.rs
description: "input: items INPUT_ITEMS\noptions: -q stum --algo frizbee --typos"
---
"  src/skim_item.rs                                                             ▐"
"  src/output.rs                                                                ▐"
"  src/item.rs                                                                  ▐"
"  src/fuzzy_matcher/clangd.rs                                                  ▐"
"  src/fuzzy_matcher/frizbee.rs                                                 ▐"
"  src/fuzzy_matcher/skim.rs                                                    ▐"
"  src/fuzzy_matcher/util.rs                                                    ▐"
"  src/fuzzy_matcher/mod.rs                                                     ▐"
"  src/theme.rs                                                                 ▐"
"  src/tui/header.rs                                                            ▐"
"  src/tui/statusline.rs                                                        ▐"
"  src/tui/input.rs                                                              "
"  src/tui/app.rs                                                                "
"  src/tui/backend.rs                                                            "
"  src/tui/event.rs                                                              "
"  src/tui/preview.rs                                                            "
"  src/tui/widget.rs                                                             "
"  src/tui/options.rs                                                            "
"  src/tui/util.rs                                                               "
"  src/tmux.rs                                                                   "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  24/49                                                                      0/0"
"> stum                                                                          "
cursor: (24, 7)
