tests/snapshots/matcher__matcher_fzy_typos.snap
---
source: tests/matcher.rs
expression: buf + & cursor_pos
---
"  src/output.rs                                                                 "
"  src/helper/item_reader.rs                                                     "
"  src/tmux.rs                                                                   "
"  src/helper/item.rs                                                            "
"  src/skim_item.rs                                                              "
"  src/item.rs                                                                   "
"  src/fuzzy_matcher/skim.rs                                                     "
"  src/fuzzy_matcher/util.rs                                                     "
"  src/fuzzy_matcher/mod.rs                                                      "
"  src/tui/statusline.rs                                                         "
"  src/tui/backend.rs                                                            "
"  src/tui/preview.rs                                                            "
"  src/tui/options.rs                                                            "
"  src/tui/header.rs                                                             "
"  src/tui/widget.rs                                                             "
"  src/tui/input.rs                                                              "
"  src/tui/event.rs                                                              "
"  src/tui/util.rs                                                               "
"  src/tui/app.rs                                                                "
"  src/theme.rs                                                                  "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  22/49                                                                      0/0"
"> stum                                                                          "
cursor: (24, 7)
