tests/snapshots/matcher__matcher_skim_v2.snap
---
source: tests/matcher.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  src/tui/item_list.rs                                                          "
"> src/tui/mod.rs                                                                "
"  2/49                                                                       0/0"
"> stum                                                                          "
cursor: (24, 7)
